--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
+    "aws-sdk": "^2.1670.0",
+    "axios": "^1.7.3",
+    "ethers": "^6.13.2",
     "framer-motion": "^6.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
